--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bob the Bone Cowboy</title>
 
-  <!-- ✅ Use Three.js r148 (last fully global version) -->
+  <!-- ✅ Load compatible global THREE.js + FBXLoader (r148 for full global support) -->
   <script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
   <script src="https://unpkg.com/three@0.148.0/examples/js/loaders/FBXLoader.js"></script>
 
@@ -31,6 +31,21 @@
 </head>
 <body>
   <div id="status">Loading Bob…</div>
-  <script src="./bob.js"></script>
+
+  <!-- ✅ Delay bob.js until Three & FBXLoader are loaded -->
+  <script>
+    function waitForTHREE() {
+      if (window.THREE && window.FBXLoader) {
+        console.log("✅ THREE.js and FBXLoader ready — starting Bob.js");
+        const script = document.createElement("script");
+        script.src = "./bob.js";
+        document.body.appendChild(script);
+      } else {
+        console.log("⏳ Waiting for THREE / FBXLoader…");
+        setTimeout(waitForTHREE, 250);
+      }
+    }
+    waitForTHREE();
+  </script>
 </body>
 </html>
