--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bob the Bone Cowboy</title>
 
-  <!-- ✅ Load compatible global THREE.js + FBXLoader (r148 for full global support) -->
-  <script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.148.0/examples/js/loaders/FBXLoader.js"></script>
+  <!-- ✅ Known-good global versions that expose THREE and FBXLoader -->
+  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r148/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r148/examples/js/loaders/FBXLoader.js"></script>
 
   <style>
     html, body {
-      margin: 0;
       height: 100%;
+      margin: 0;
       background: radial-gradient(circle at center, #0b0b0b 50%, #000 100%);
+      overflow: hidden;
       color: #b8ffb8;
       font-family: monospace;
-      overflow: hidden;
     }
     canvas { display: block; }
     #status {
@@ -24,25 +24,25 @@
       bottom: 10px;
       width: 100%;
       text-align: center;
+      opacity: 0.85;
       font-size: 1rem;
-      opacity: 0.8;
     }
   </style>
 </head>
 <body>
   <div id="status">Loading Bob…</div>
 
-  <!-- ✅ Delay bob.js until Three & FBXLoader are loaded -->
+  <!-- ✅ Wait until both THREE and FBXLoader are live -->
   <script>
     function waitForTHREE() {
       if (window.THREE && window.FBXLoader) {
-        console.log("✅ THREE.js and FBXLoader ready — starting Bob.js");
-        const script = document.createElement("script");
-        script.src = "./bob.js";
-        document.body.appendChild(script);
+        console.log("✅ THREE.js & FBXLoader detected — starting Bob");
+        const s = document.createElement("script");
+        s.src = "./bob.js";
+        document.body.appendChild(s);
       } else {
         console.log("⏳ Waiting for THREE / FBXLoader…");
-        setTimeout(waitForTHREE, 250);
+        setTimeout(waitForTHREE, 300);
       }
     }
     waitForTHREE();
