--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bob the Bone Cowboy</title>
 
-  <!-- ✅ Known-good global versions that expose THREE and FBXLoader -->
+  <!-- ✅ Load global THREE (r148 — stable) -->
   <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r148/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r148/examples/js/loaders/FBXLoader.js"></script>
+
+  <!-- ✅ Load FBXLoader as ES module and attach to window -->
+  <script type="module">
+    import { FBXLoader } from "https://cdn.jsdelivr.net/gh/mrdoob/three.js@r148/examples/jsm/loaders/FBXLoader.js";
+    window.FBXLoader = FBXLoader;
+    console.log("✅ FBXLoader module attached to window");
+  </script>
 
   <style>
     html, body {
-      height: 100%;
       margin: 0;
+      height: 100%;
       background: radial-gradient(circle at center, #0b0b0b 50%, #000 100%);
       overflow: hidden;
       color: #b8ffb8;
@@ -24,7 +30,7 @@
       bottom: 10px;
       width: 100%;
       text-align: center;
-      opacity: 0.85;
+      opacity: 0.9;
       font-size: 1rem;
     }
   </style>
@@ -32,20 +38,19 @@
 <body>
   <div id="status">Loading Bob…</div>
 
-  <!-- ✅ Wait until both THREE and FBXLoader are live -->
+  <!-- ✅ Load Bob only after FBXLoader attaches -->
   <script>
-    function waitForTHREE() {
+    (function wait() {
       if (window.THREE && window.FBXLoader) {
-        console.log("✅ THREE.js & FBXLoader detected — starting Bob");
+        console.log("🚀 THREE & FBXLoader ready — booting Bob.js");
         const s = document.createElement("script");
         s.src = "./bob.js";
         document.body.appendChild(s);
       } else {
-        console.log("⏳ Waiting for THREE / FBXLoader…");
-        setTimeout(waitForTHREE, 300);
+        console.log("⏳ Waiting for FBXLoader attachment…");
+        setTimeout(wait, 250);
       }
-    }
-    waitForTHREE();
+    })();
   </script>
 </body>
 </html>
