--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bob the Bone Cowboy</title>
 
-  <!-- ✅ Force global THREE + FBXLoader -->
+  <!-- ✅ Force old-style global THREE build -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FBXLoader.js"></script>
+
+  <!-- ✅ Patch FBXLoader to global scope -->
+  <script>
+    (async () => {
+      const src = "https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/FBXLoader.js";
+      const txt = await fetch(src).then(r => r.text());
+      // turn it into a global-attached loader
+      const patched = txt.replace(
+        /export\s+\{[^}]+\};?/g,
+        "window.FBXLoader = FBXLoader;"
+      );
+      const blob = new Blob([patched], { type: "application/javascript" });
+      const url = URL.createObjectURL(blob);
+      const s = document.createElement("script");
+      s.src = url;
+      document.head.appendChild(s);
+    })();
+  </script>
 
   <style>
     html, body {
@@ -32,16 +49,16 @@
 <body>
   <div id="status">Loading Bob…</div>
 
-  <!-- ✅ Bob loads AFTER global THREE/FBXLoader confirmed -->
+  <!-- ✅ Wait for both THREE and FBXLoader -->
   <script>
     function loadBob() {
-      console.log("✅ THREE:", !!window.THREE, "FBXLoader:", !!window.FBXLoader);
+      console.log("THREE:", !!window.THREE, "FBXLoader:", !!window.FBXLoader);
       if (window.THREE && window.FBXLoader) {
         const s = document.createElement("script");
-        s.src = "./bob.js?v=" + Date.now(); // cache bust
+        s.src = "./bob.js?v=" + Date.now();
         document.body.appendChild(s);
       } else {
-        console.warn("⏳ Waiting for THREE / FBXLoader…");
+        console.warn("⏳ Waiting for FBXLoader attachment…");
         setTimeout(loadBob, 500);
       }
     }
