--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <!-- fflate (needed for FBXLoader) -->
   <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/umd/index.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/loaders/MTLLoader.js"></script>
+
   <!-- FBX + Orbit controls -->
   <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/loaders/FBXLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/controls/OrbitControls.js"></script>
