--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <title>Bob the Bone Cowboy v5.5</title>
 
   <!-- Three.js -->
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@0.152.0/build/three.min.js"></script>
 
   <!-- fflate (needed for FBXLoader) -->
   <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/umd/index.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/loaders/MTLLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@0.152.0/examples/js/loaders/MTLLoader.js"></script>
 
   <!-- FBX + Orbit controls -->
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/loaders/FBXLoader.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/controls/OrbitControls.js"></script>
+<!-- Replace r146 with a newer version -->
+<script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/controls/OrbitControls.js"></script>
 
   <style>
     body {
