--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bob the Bone Cowboy v5.5</title>
 
-  <!-- Three.js -->
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@0.152.0/build/three.min.js"></script>
+  <!-- Three.js core -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
 
-  <!-- fflate (needed for FBXLoader) -->
+  <!-- fflate for FBX decompression -->
   <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/umd/index.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@0.152.0/examples/js/loaders/MTLLoader.js"></script>
+  <!-- FBX Loader (required!) -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/loaders/FBXLoader.js"></script>
 
-  <!-- FBX + Orbit controls -->
-<!-- Replace r146 with a newer version -->
-<script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/controls/OrbitControls.js"></script>
+  <!-- Orbit controls -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/controls/OrbitControls.js"></script>
 
   <style>
     body {
