--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 </head>
 <body>
 
-<script type="module" src="./bob.js"></script>
+<script type="module" src="./bob.js?v=8.8"></script>
 </body>
 </html>
