--- a/index.html
+++ b/index.html
@@ -1,43 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bob the Bone Cowboy</title>
-
-  <!-- Three.js core (r146) -->
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/build/three.min.js"></script>
-
-  <!-- fflate for FBX decompression -->
-  <script src="https://cdn.jsdelivr.net/npm/fflate@0.8.2/umd/index.js"></script>
-
-  <!-- FBX Loader (r146) -->
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/loaders/FBXLoader.js"></script>
-
-  <!-- Orbit controls (r146) -->
-  <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r146/examples/js/controls/OrbitControls.js"></script>
-
-  <style>
-    body {
-      margin: 0;
-      background: radial-gradient(circle at center, #0b0b0b 50%, #000 100%);
-      overflow: hidden;
-      text-align: center;
-      color: #b8ffb8;
-      font-family: monospace;
-    }
-    #status {
-      position: absolute;
-      bottom: 1rem;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 1.1rem;
-      opacity: 0.9;
-    }
-  </style>
-</head>
-<body>
-
-<script type="module" src="./bob.js?v=8.9"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bob the Bone Cowboy</title>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+        background: radial-gradient(circle at center, #0b0b0b 50%, #000 100%);
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Bob Script -->
+    <script type="module" src="./bob.js?v=8.7"></script>
+  </body>
 </html>
