--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <!-- Bob Script -->
-    <script type="module" src="./bob.js?v=8.7"></script>
+    <script type="module" src="./bob.js?v=9.0"
+      
+      ></script>
   </body>
 </html>
