--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bob the Bone Cowboy</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-        background: radial-gradient(circle at center, #0b0b0b 50%, #000 100%);
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Bob Script -->
-    <script type="module" src="./bob.js?v=9.0"
-      
-      ></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bob the Bone Cowboy</title>
+</head>
+<body style="margin:0; overflow:hidden; background:black;">
+  <script type="module" src="/src/main.js"></script>
+</body>
 </html>
