Fix script path for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Bob the Bone Cowboy</title>
 </head>
 <body style="margin:0; overflow:hidden; background:black;">
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 </html>
